tests/transpiler/x/java/json_builtin.error
exit status 1
Main.java:14: error: cannot find symbol
        json(m);
        ^
  symbol:   method json(Data1)
  location: class Main
1 error
